# t3-code-sdk

./: .gitignore  README.md  __init__.py  package-lock.json  pyproject.toml  t3_code.py
skills/: t3-code.md
t3-code-cli/: package-lock.json  package.json  tsconfig.json
t3-code-cli/src/: cli.ts  sdk.ts
t3-code-cli/test/: sdk.test.ts
t3_code_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_t3_sdk.py
