[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t3-code-sdk"
version = "0.1.0"
description = "Python SDK for reading and mutating T3 Code state."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["t3", "t3code", "sdk", "sqlite", "websocket"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/jakesomerville/t3-code-sdk"
Repository = "https://github.com/jakesomerville/t3-code-sdk"

[tool.setuptools]
py-modules = ["t3_code"]
packages = ["t3_code_sdk"]

[tool.setuptools.package-data]
t3_code_sdk = ["py.typed"]
